add_executable(ch_17_03_00_memory_addresses_pointers
               ch_17_03_00_memory_addresses_pointers.cpp)
add_executable(ch_17_03_01_sizeof_operator ch_17_03_01_sizeof_operator.cpp)
add_executable(ch_17_04_01_free_store_allocation
               ch_17_04_01_free_store_allocation.cpp)
add_executable(ch_17_04_02_access_through_pointers
               ch_17_04_02_access_through_pointers.cpp)
add_executable(ch_17_04_04_initialization ch_17_04_04_initialization.cpp)
add_executable(ch_17_04_06_free_store_deallocation
               ch_17_04_06_free_store_deallocation.cpp)
add_executable(ch_17_06_access_to_elements ch_17_06_access_to_elements.cpp)
add_executable(ch_17_09_00_pointers_and_references
               ch_17_09_00_pointers_and_references.cpp)
add_executable(ch_17_09_01_pointer_and_reference_parameters
               ch_17_09_01_pointer_and_reference_parameters.cpp)
add_executable(ch_17_09_05_list_use ch_17_09_05_list_use.cpp)
add_executable(ch_17_10_01_the_this_pointer ch_17_10_01_the_this_pointer.cpp)

