add_executable(ch_18_02_00_initialization ch_18_02_00_initialization.cpp)
add_executable(ch_18_02_01_initializer_list ch_18_02_01_initializer_list.cpp)
add_executable(ch_18_03_01_copy_constructors ch_18_03_01_copy_constructors.cpp)
add_executable(ch_18_03_02_copy_assignments ch_18_03_02_copy_assignments.cpp)
add_executable(ch_18_03_03_copy_terminology ch_18_03_03_copy_terminology.cpp)
add_executable(ch_18_04_00_essential_operations ch_18_04_00_essential_operations.cpp)
add_executable(ch_18_04_02_debugging_constructors_and_destructors
               ch_18_04_02_debugging_constructors_and_destructors.cpp)
add_executable(ch_18_05_00_access_to_vector_elements_v1
               ch_18_05_00_access_to_vector_elements_v1.cpp)
add_executable(ch_18_05_00_access_to_vector_elements_v2
               ch_18_05_00_access_to_vector_elements_v2.cpp)
add_executable(ch_18_05_00_access_to_vector_elements_v3
               ch_18_05_00_access_to_vector_elements_v3.cpp)
add_executable(ch_18_05_01_overloading_on_const
               ch_18_05_01_overloading_on_const.cpp)
add_executable(ch_18_05_02_move_semantics ch_18_05_02_move_semantics.cpp)
add_executable(ch_18_06_03_array_initialization
               ch_18_06_03_array_initialization.cpp)
add_executable(ch_18_07_01_palindromes_using_string
               ch_18_07_01_palindromes_using_string.cpp)
add_executable(ch_18_07_02_palindromes_using_arrays
               ch_18_07_02_palindromes_using_arrays.cpp)
add_executable(ch_18_07_03_palindromes_using_pointers
               ch_18_07_03_palindromes_using_pointers.cpp)
add_executable(ch_18_07_04_palindromes_using_pointers_recursive
               ch_18_07_04_palindromes_using_pointers_recursive.cpp)


