add_executable(ch_19_01_the_problems ch_19_01_the_problems.cpp)
add_executable(ch_19_02_00_changing_size ch_19_02_00_changing_size.cpp)
add_executable(ch_19_02_01_representation ch_19_02_01_representation.cpp)
add_executable(ch_19_02_02_reserve_and_capacity
               ch_19_02_02_reserve_and_capacity.cpp)
add_executable(ch_19_02_03_resize ch_19_02_03_resize.cpp)
add_executable(ch_19_02_04_push_back ch_19_02_04_push_back.cpp)
add_executable(ch_19_02_05_assignment ch_19_02_05_assignment.cpp)
add_executable(ch_19_02_06_vector_so_far ch_19_02_06_vector_so_far.cpp)
add_executable(ch_19_03_01_types_as_template_parameters
               ch_19_03_01_types_as_template_parameters.cpp)
add_executable(ch_19_03_05_template_parameters
               ch_19_03_05_template_parameters.cpp)
add_executable(ch_19_03_06_template_argument_deduction
               ch_19_03_06_template_argument_deduction.cpp)
add_executable(ch_19_03_07_generalizing_vector
               ch_19_03_07_generalizing_vector.cpp)
add_executable(ch_19_04_02_range_checking_and_exceptions
               ch_19_04_02_range_checking_and_exceptions.cpp)

